--- a/index.html
+++ b/index.html
@@ -12,7 +12,149 @@
 </head>
 <body>
     <div class="mainPage">
-        
+        <header>
+            <h1><a href="index.html">LNC (주)엘앤씨 에프앤비</a></h1>
+            <nav>
+                <ul>
+                    <li><a href="aboutUs.html">회사소개</a></li>
+                    <li><a href="business.html">사업안내</a></li>
+                    <li><a href="employ.html">연계고용</a></li>
+                    <li><a href="news.html">LNC소식</a></li>
+                    <li><a href="inquiry.html">납품문의</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <aside>
+            <a href="">
+                연계고용부담
+                <strong>감면제도란?</strong>
+            </a>
+            <a href="">
+                연계고용감면
+                <strong>절차 안내</strong>
+            </a>
+            <a href="">
+                연계고용부담금
+                <strong>감면 계산기</strong>
+            </a>
+        </aside>
+
+        <div class="fullBox">
+            <section>
+                <div>
+                    <mark>Healthy together!</mark>
+                    함께 건강하게!
+                </div>
+                <h2>
+                    연계고용으로<br>
+                    건강한 먹거리를 만듭니다.
+                </h2>
+                <p>
+                    LNC FNB는 함께 건강한 사회를 만들고자 합니다. 
+                    건강한 먹을거리를 제공하는 기업. 
+                    장애인과 건강한 상생구조를 만드는 기업. 
+                    연계고용을 통해 건강한 파트너들과 사회에 이바지하는 기업. 
+                    LNC FNB가 만들어갈 건강함을 함께해주세요.
+                </p>
+                <a href="">자세히보기</a>
+            </section>
+            <section>
+                <div>
+                    <mark>Healthy together!</mark>
+                    함께 건강하게!
+                </div>
+                <h2>
+                    매일 도축가공으로<br>
+                    신선함을 배송합니다.
+                </h2>
+                <p>
+                    LNC FNB가 만드는 축산품은 다양한 공공기관 및 
+                    학교와 프랜차이즈로 납품됩니다. 
+                    가장 건강하고 든든한 식사를 위해 매일도축, 
+                    요청시간 준수를 최우선 원칙으로 진행합니다.
+                </p>
+                <a href="">자세히보기</a>
+            </section>
+            <section>
+                <div>
+                    <mark>Healthy together!</mark>
+                    함께 건강하게!
+                </div>
+                <h2>
+                    장애인 표준 사업장 인증<br>
+                    장애인 고용창출에 기여합니다.
+                </h2>
+                <p>
+                    파트너가 늘어날 수록 LNC는 더 많은 장애인 고용이 가능해집니다. 
+                    또한 파트너사도 연계고용 부담금 감면 혜택을 받을 수 있습니다. 
+                    건강한 먹을거리가 필요할 때 연계고용 기업LNC를 기억해주세요.
+                </p>
+                <a href="">자세히보기</a>
+            </section>
+            <section>
+                <h2>LNC 소식</h2>
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="" alt="">
+                            <b>LNC 관련 소식 타이틀 영역</b>
+                            <time>2024.03.30</time>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="" alt="">
+                            <b>LNC 관련 소식 타이틀 영역</b>
+                            <time>2024.03.30</time>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="" alt="">
+                            <b>LNC 관련 소식 타이틀 영역</b>
+                            <time>2024.03.30</time>
+                        </a>
+                    </li>
+                </ul>
+                <a href="">소식 더보기</a>
+            </section>
+            <footer>
+                <img src="images/logo02.png" alt="">
+                <address>
+                    <dl>
+                        <dt>대표자명</dt>
+                        <dd>이대근</dd>
+                    </dl>
+                    <dl>
+                        <dt>사업자번호</dt>
+                        <dd>811-88-00994</dd>
+                    </dl>
+                    <dl>
+                        <dt>사업장 주소</dt>
+                        <dd>경기도 김포시 하성면 하사로92</dd>
+                    </dl>
+                    <dl>
+                        <dt>대표 전화</dt>
+                        <dd>031-998-3902</dd>
+                    </dl>
+                    <dl>
+                        <dt>팩스</dt>
+                        <dd>031-998-3903</dd>
+                    </dl>
+                    <dl>
+                        <dt>대표 이메일</dt>
+                        <dd>9056599@naver.com</dd>
+                    </dl>
+                </address>
+            </footer>
+        </div>
+        <div class="paginationBox">
+            <button>이전</button>
+            <span>01</span>
+            <span>04</span>
+            <button>다음</button>
+        </div>
     </div>
 </body>
 </html>
