--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     <div class="mainPage">
-        <header>
-            <h1><a href="index.html">LNC (주)엘앤씨 에프앤비</a></h1>
+        <header class="mainContentSize">
+            <h1><a href="index.html" class="imgBox">LNC (주)엘앤씨 에프앤비</a></h1>
+            <button class="iconBox">메뉴 열기</button>
             <nav>
                 <ul>
                     <li><a href="aboutUs.html">회사소개</a></li>
@@ -22,6 +23,7 @@
                     <li><a href="news.html">LNC소식</a></li>
                     <li><a href="inquiry.html">납품문의</a></li>
                 </ul>
+                <button class="iconBox">메뉴 닫기</button>
             </nav>
         </header>
 
@@ -41,77 +43,77 @@
         </aside>
 
         <div class="fullBox">
-            <section>
-                <div>
-                    <mark>Healthy together!</mark>
+            <div class="mainContentSize">
+                <span>
+                    <mark class="point01 underLine">Healthy together!</mark>
                     함께 건강하게!
-                </div>
+                </span>
                 <h2>
                     연계고용으로<br>
                     건강한 먹거리를 만듭니다.
                 </h2>
                 <p>
-                    LNC FNB는 함께 건강한 사회를 만들고자 합니다. 
-                    건강한 먹을거리를 제공하는 기업. 
-                    장애인과 건강한 상생구조를 만드는 기업. 
-                    연계고용을 통해 건강한 파트너들과 사회에 이바지하는 기업. 
+                    LNC FNB는 함께 건강한 사회를 만들고자 합니다.<br>
+                    건강한 먹을거리를 제공하는 기업.<br>
+                    장애인과 건강한 상생구조를 만드는 기업.<br>
+                    연계고용을 통해 건강한 파트너들과 사회에 이바지하는 기업.<br>
                     LNC FNB가 만들어갈 건강함을 함께해주세요.
                 </p>
                 <a href="">자세히보기</a>
-            </section>
-            <section>
-                <div>
-                    <mark>Healthy together!</mark>
+            </div>
+            <div class="mainContentSize">
+                <span>
+                    <mark class="point01 underLine">Healthy together!</mark>
                     함께 건강하게!
-                </div>
+                </span>
                 <h2>
                     매일 도축가공으로<br>
                     신선함을 배송합니다.
                 </h2>
                 <p>
-                    LNC FNB가 만드는 축산품은 다양한 공공기관 및 
-                    학교와 프랜차이즈로 납품됩니다. 
-                    가장 건강하고 든든한 식사를 위해 매일도축, 
+                    LNC FNB가 만드는 축산품은 다양한 공공기관 및<br>
+                    학교와 프랜차이즈로 납품됩니다.<br>
+                    가장 건강하고 든든한 식사를 위해 매일도축,<br>
                     요청시간 준수를 최우선 원칙으로 진행합니다.
                 </p>
                 <a href="">자세히보기</a>
-            </section>
-            <section>
-                <div>
-                    <mark>Healthy together!</mark>
+            </div>
+            <div class="mainContentSize">
+                <span>
+                    <mark class="point01 underLine">Healthy together!</mark>
                     함께 건강하게!
-                </div>
+                </span>
                 <h2>
                     장애인 표준 사업장 인증<br>
                     장애인 고용창출에 기여합니다.
                 </h2>
                 <p>
-                    파트너가 늘어날 수록 LNC는 더 많은 장애인 고용이 가능해집니다. 
-                    또한 파트너사도 연계고용 부담금 감면 혜택을 받을 수 있습니다. 
+                    파트너가 늘어날 수록 LNC는 더 많은 장애인 고용이 가능해집니다.<br>
+                    또한 파트너사도 연계고용 부담금 감면 혜택을 받을 수 있습니다.<br>
                     건강한 먹을거리가 필요할 때 연계고용 기업LNC를 기억해주세요.
                 </p>
                 <a href="">자세히보기</a>
-            </section>
-            <section>
+            </div>
+            <section class="mainContentSize newsArea">
                 <h2>LNC 소식</h2>
                 <ul>
                     <li>
                         <a href="">
-                            <img src="" alt="">
+                            <img src="https://placehold.co/440x248" alt="임시 이미지">
                             <b>LNC 관련 소식 타이틀 영역</b>
                             <time>2024.03.30</time>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="" alt="">
+                            <img src="https://placehold.co/440x248" alt="임시 이미지">
                             <b>LNC 관련 소식 타이틀 영역</b>
                             <time>2024.03.30</time>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="" alt="">
+                            <img src="https://placehold.co/440x248" alt="임시 이미지">
                             <b>LNC 관련 소식 타이틀 영역</b>
                             <time>2024.03.30</time>
                         </a>
