PC - 회사소개 페이지 완료

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                     <mark class="point01 underLine">Healthy together!</mark>
                     함께 건강하게!
                 </span>
-                <h2>
+                <strong>
                     연계고용으로<br>
                     건강한 먹거리를 만듭니다.
-                </h2>
+                </strong>
                 <p>
                     LNC FNB는 함께 건강한 사회를 만들고자 합니다.<br>
                     건강한 먹을거리를 제공하는 기업.<br>
@@ -66,10 +66,10 @@
                     <mark class="point01 underLine">Healthy together!</mark>
                     함께 건강하게!
                 </span>
-                <h2>
+                <strong>
                     매일 도축가공으로<br>
                     신선함을 배송합니다.
-                </h2>
+                </strong>
                 <p>
                     LNC FNB가 만드는 축산품은 다양한 공공기관 및<br>
                     학교와 프랜차이즈로 납품됩니다.<br>
@@ -83,10 +83,10 @@
                     <mark class="point01 underLine">Healthy together!</mark>
                     함께 건강하게!
                 </span>
-                <h2>
+                <strong>
                     장애인 표준 사업장 인증<br>
                     장애인 고용창출에 기여합니다.
-                </h2>
+                </strong>
                 <p>
                     파트너가 늘어날 수록 LNC는 더 많은 장애인 고용이 가능해집니다.<br>
                     또한 파트너사도 연계고용 부담금 감면 혜택을 받을 수 있습니다.<br>
@@ -122,7 +122,7 @@
                 <a href="">소식 더보기</a>
             </section>
             <footer>
-                <img src="images/logo02.png" alt="">
+                <img src="images/logo02.png" alt="LNC (주)엘앤씨 에프앤비">
                 <address>
                     <dl>
                         <dt>대표자명</dt>
