--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,12 +5,205 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
-    <title>LNC (주)엘앤씨 에프앤비</title> 
+    <title>회사 소개 - LNC (주)엘앤씨 에프앤비</title> 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="js/style.js"></script>
     <link rel="stylesheet" href="css/import.css">
 </head>
 <body>
-    
+    <div class="aboutAsPage">
+        <header class="mainContentSize">
+            <h1><a href="index.html" class="imgBox">LNC (주)엘앤씨 에프앤비</a></h1>
+            <button class="iconBox">메뉴 열기</button>
+            <nav>
+                <ul>
+                    <li><a href="aboutUs.html">회사소개</a></li>
+                    <li><a href="business.html">사업안내</a></li>
+                    <li><a href="employ.html">연계고용</a></li>
+                    <li><a href="news.html">LNC소식</a></li>
+                    <li><a href="inquiry.html">납품문의</a></li>
+                </ul>
+                <button class="iconBox">메뉴 닫기</button>
+            </nav>
+        </header>
+
+        <aside>
+            <a href="">
+                연계고용부담
+                <strong>감면제도란?</strong>
+            </a>
+            <a href="">
+                연계고용감면
+                <strong>절차 안내</strong>
+            </a>
+            <a href="">
+                연계고용부담금
+                <strong>감면 계산기</strong>
+            </a>
+        </aside>
+
+        <div class="contentsBox">
+            <div class="topBox">
+                <p><strong>Healthy together!</strong> 함께 건강하게! 를 꿈꾸는 기업</p>
+                <img src="images/logo02.png" alt="LNC (주)엘앤씨 에프앤비">
+                <p>
+                    LNC FNB는 축산물 가공납품 전문 기업으로 현재 서울시, 경기도, 인천시 소재 초,중,고등학교<br class="pc">
+                    집단 급식실 (150개소 이상)에 축산물 가공 납품 중이며 그 외 다수의 프랜차이즈 및<br class="pc">
+                    로드샵 소매점 축산물 가공 납품 및 해병대, 해군 등 군납 가공 납품영역을 담당하고 있습니다.
+                </p>
+            </div>
+
+            <section class="historyArea">
+                <h2 class="underLine">회사연혁</h2>
+                <ol>
+                    <li>
+                        <span>2014</span>
+                        <div>
+                            <p>한라유통(고양시) 설립</p>
+                            <p>농림부 HACCP 적용작업장</p>
+                        </div>
+                    </li>
+                    <li>
+                        <span>2016</span>
+                        <div>
+                            <p>한라유통(용인시) 물류창고 설립</p>
+                        </div>
+                    </li>
+                    <li>
+                        <span>2017</span>
+                        <div>
+                            <p>
+                                (주)엠엔디 컴퍼니(인천시)<br>
+                                공장설립
+                            </p>
+                            <p>농림부 HACCP 적용작업장</p>
+                        </div>
+                    </li>
+                    <li>
+                        <span>2018</span>
+                        <div>
+                            <p>
+                                (주)엘앤씨 에프앤비(고양시)<br>
+                                공장설립
+                            </p>
+                            <p>농림부 HACCP 적용작업장</p>
+                        </div>
+                    </li>
+                    <li>
+                        <span>2019</span>
+                        <div>
+                            <p>
+                                돈육(돈까스) 성형기 및<br>
+                                커틀릿 제품 생산
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <span>2020</span>
+                        <div>
+                            <p>
+                                김포시 하성면 소재 <br>
+                                공장부지 매입 및 설립
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <span>2021</span>
+                        <div>
+                            <p>식육포장처리업 허가 및 
+                                HACCP인증 취득</p>
+                            <p>
+                                김포시 소재 제2 물류창고 설립<br>
+                                (경기도 김포시 하성면 대지1000평 규모)
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <span>2022</span>
+                        <div>
+                            <p>벤처기업 확인서 획득</p>
+                            <p>
+                                장애인표준사업장 <br>
+                                인증 획득
+                            </p>
+                        </div>
+                    </li>
+                </ol>
+            </section>
+
+            <section class="certificationArea">
+                <h2 class="underLine">장애인 표준 사업장 및 HACCP 인증기업</h2>
+                <p>
+                    LNC는 <b>장애인 표준 사업장 인증</b>으로 장애인 고용 및 <b>연계고용 부담금 감면제도 혜택</b>이 가능하며,<br>
+                    <b>HACCP 인증</b>으로 품질관리에 최선을 다하고 있습니다.
+                </p>
+                <ul data-styleIdx>
+                    <li class="imgBox">장애인 표준사업장 인증서</li>
+                    <li class="imgBox">신고필증</li>
+                    <li class="imgBox">신고필증</li>
+                    <li class="imgBox">허가증</li>
+                    <li class="imgBox">안전관리인증(작업장, 업소, 농장) (HACCP) 인증서</li>
+                    <li class="imgBox">영업신고증</li>
+                    <li class="imgBox">영업등록증</li>
+                </ul>
+                <a href="">연계고용 부담금 감면 자세히보기</a>
+            </section>
+
+            <section class="contactArea">
+                <h2 class="underLine">Contact</h2>
+                <p>LNC는 언제나 파트너사와의 협력을 기대합니다.</p>
+                <ul data-styleIdx>
+                    <li>
+                        <b>사업장 주소</b>
+                        <p>경기도 김포시 하성면 하사로92</p>
+                    </li>
+                    <li>
+                        <b>대표 전화</b>
+                        <p>031-998-3902</p>
+                    </li>
+                    <li>
+                        <b>팩스</b>
+                        <p>031-998-3903</p>
+                    </li>
+                    <li>
+                        <b>대표 이메일</b>
+                        <p>9056599@naver.com</p>
+                    </li>
+                </ul>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3157.019081477059!2d126.64155507632772!3d37.69575091670754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c87b7ce82fae3%3A0x154a0242d5aa7b11!2z6rK96riw64-EIOq5gO2PrOyLnCDtlZjshLHrqbQg7ZWY7IKs66GcIDky!5e0!3m2!1sko!2skr!4v1711011711917!5m2!1sko!2skr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+        </div>
+
+        
+        <footer>
+            <img src="images/logo02.png" alt="LNC (주)엘앤씨 에프앤비">
+            <address>
+                <dl>
+                    <dt>대표자명</dt>
+                    <dd>이대근</dd>
+                </dl>
+                <dl>
+                    <dt>사업자번호</dt>
+                    <dd>811-88-00994</dd>
+                </dl>
+                <dl>
+                    <dt>사업장 주소</dt>
+                    <dd>경기도 김포시 하성면 하사로92</dd>
+                </dl>
+                <dl>
+                    <dt>대표 전화</dt>
+                    <dd>031-998-3902</dd>
+                </dl>
+                <dl>
+                    <dt>팩스</dt>
+                    <dd>031-998-3903</dd>
+                </dl>
+                <dl>
+                    <dt>대표 이메일</dt>
+                    <dd>9056599@naver.com</dd>
+                </dl>
+            </address>
+        </footer>
+    </div>
 </body>
 </html>
