PC - 사업안내 페이지 완료

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,7 +17,7 @@
             <button class="iconBox">메뉴 열기</button>
             <nav>
                 <ul>
-                    <li><a href="aboutUs.html">회사소개</a></li>
+                    <li class="active"><a href="aboutUs.html">회사소개</a></li>
                     <li><a href="business.html">사업안내</a></li>
                     <li><a href="employ.html">연계고용</a></li>
                     <li><a href="news.html">LNC소식</a></li>
