--- a/business.html
+++ b/business.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
-    <title>LNC (주)엘앤씨 에프앤비</title> 
+    <title>사업안내 - LNC (주)엘앤씨 에프앤비</title> 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="js/style.js"></script>
     <link rel="stylesheet" href="css/import.css">
 </head>
 <body>
-    <div class="aboutAsPage">
+    <div class="businessPage">
         <header class="mainContentSize">
             <h1><a href="index.html" class="imgBox">LNC (주)엘앤씨 에프앤비</a></h1>
             <button class="iconBox">메뉴 열기</button>
             <nav>
                 <ul>
                     <li><a href="aboutUs.html">회사소개</a></li>
-                    <li><a href="business.html">사업안내</a></li>
+                    <li class="active"><a href="business.html">사업안내</a></li>
                     <li><a href="employ.html">연계고용</a></li>
                     <li><a href="news.html">LNC소식</a></li>
                     <li><a href="inquiry.html">납품문의</a></li>
@@ -42,8 +42,75 @@
             </a>
         </aside>
 
+        <div class="topBox contentsSize-padding">
+            <p>
+                건강한 먹거리를<br>
+                <strong>가장 신선하고 위생적으로<br>
+                가공 납품</strong>합니다.
+            </p>
+        </div>
+
         <div class="contentsBox">
-            
+            <section class="processArea">
+                <h2 class="underLine">납품 Process</h2>
+                <p>LNC는 <b>매일 도축 가공</b>을 진행하며, <b>적시 납품을 최우선</b> 목표로 노력합니다.</p>
+                <ol data-styleIdx>
+                    <li>
+                        <b>의뢰내역 확인</b>
+                        <p>
+                            의뢰내역 확인 후<br class="pc">
+                            견적 계약 진행
+                        </p>
+                    </li>
+                    <li>
+                        <b>최적일정 발주</b>
+                        <p>
+                            납품일에 맞춰<br class="pc">
+                            최적 발주
+                        </p>
+                    </li>
+                    <li>
+                        <b>직접 도축/가공</b>
+                        <p>
+                            매일 도축 가공으로<br class="pc">
+                            신선하게!
+                        </p>
+                    </li>
+                    <li>
+                        <b>맞춤 남품</b>
+                        <p>요청 시간 맞춤 납품</p>
+                    </li>
+                </ol>
+            </section>
+
+            <section class="partnersArea">
+                <h2 class="underLine">Partners</h2>
+                <p>주요 납품처 및 협력업체</p>
+                <ul data-styleIdx>
+                    <li>
+                        <p><strong>서울</strong>소재 초, 중, 고등학교 50개소</p>
+                    </li>
+                    <li>
+                        <p><strong>경기</strong>소재 초, 중, 고등학교 50개소</p>
+                    </li>
+                    <li>
+                        <p><strong>인천</strong>소재 초, 중, 고등학교 50개소</p>
+                    </li>
+                    <li>
+                        <strong>(주)다함컴퍼니 금화왕돈까스</strong>
+                        <p>프랜차이즈 전국 50개소</p>
+                    </li>
+                    <li>
+                        <strong>(주)쑝쑝돈까스</strong>
+                        <p>프랜차이즈 전국 150개소</p>
+                    </li>
+                    <li>
+                        <strong>(주)드링코 코리아 링코 노래타운</strong>
+                        <p>프랜차이즈 전국 30개소</p>
+                    </li>
+                </ul>
+                <a href="" class="btn-bg">납품문의하기</a>
+            </section>
         </div>
 
         
