--- a/employ.html
+++ b/employ.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/import.css">
 </head>
 <body>
-    <div class="aboutAsPage">
+    <div class="employPage">
         <header class="mainContentSize">
             <h1><a href="index.html" class="imgBox">LNC (주)엘앤씨 에프앤비</a></h1>
             <button class="iconBox">메뉴 열기</button>
