PC - 상세 페이지 완료

--- a/detail.html
+++ b/detail.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/import.css">
 </head>
 <body>
-    <div class="newsPage">
+    <div class="detailPage">
         <header class="mainContentSize">
             <h1><a href="index.html" class="imgBox">LNC (주)엘앤씨 에프앤비</a></h1>
             <button class="iconBox">메뉴 열기</button>
@@ -44,26 +44,37 @@
 
         <div class="contentsBox">
             <section>
-                <h2>LNC 소식</h2>
-                <ul class="boardBox">
-                    <li>
-                        <a href="">
-                            <img src="https://placehold.co/380x214" alt="임시 이미지">
-                            <strong>LNC 관련 소식 타이틀 영역</strong>
-                            <time>2024.03.30</time>
-                        </a>
-                    </li>
-                </ul>
-                <div class="paginationBox" data-styleIdx="a">
-                    <a class="iconBox">첫 페이지</a>
-                    <a class="iconBox">이전 페이지</a>
-                    <ol>
-                        <li class="active"><a href="">1</a></li>
-                        <li><a href="">2</a></li>
-                    </ol>
-                    <a class="iconBox">다음 페이지</a>
-                    <a class="iconBox">마지막 페이지</a>
+                <h2>LNC 관련 소식 타이틀 영역 상세페이지 상세페이지지지지지</h2>
+                <time>2024.03.30</time>
+                <div class="contentArea">
+                    <img src="https://placehold.co/1200x500" alt="임시 이미지">
+                    <p>
+                        소식 내용내용내용 내용
+                        부담금 납부 의무가 있는 사업주가 연계고용 대상 사업장(장애인 직업재활시설 또는 장애인표준사업장)에 도급을 주어 그 생산품을 납품받는 경우
+                        연계고용 대상 사업장에서 종사한 장애인근로자를 부담금 납부 의무 사업주가 고용한 것으로 간주하여 부담금을 감면하는 제도입니다. 
+                    </p>
+                    <p>
+                        소식 내용내용내용 내용 소식 내용내용내용 내용
+                        부담금 납부 의무가 있는 사업주가 연계고용 대상 사업장(장애인 직업재활시설 또는 장애인표준사업장)에 도급을 주어 그 생산품을 납품받는 경우 연계고용 대상 사업장에서 종사한 장애인근로자를 부담금 납부 의무 사업주가 고용한 것으로 간주하여 부담금을 감면하는 제도입니다.
+                    </p>
                 </div>
+                <div class="btnBox">
+                    <a href="news.html" class="btn-bg">목록으로</a>
+                    <a href="" class="btn-border">공유하기</a>
+                </div>
+
+                <section>
+                    <h3>다른 소식 보기</h3>
+                    <ul class="boardBox">
+                        <li>
+                            <a href="">
+                                <img src="https://placehold.co/380x214" alt="임시 이미지">
+                                <strong>LNC 관련 소식 타이틀 영역</strong>
+                                <time>2024.03.30</time>
+                            </a>
+                        </li>
+                    </ul>
+                </section>
             </section>
         </div>
 
