--- a/business.html
+++ b/business.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="aboutUs.html">회사소개</a></li>
                     <li class="active"><a href="business.html">사업안내</a></li>
-                    <li><a href="employ.html">연계고용</a></li>
+                    <li><a href="employ-policy.html">연계고용</a></li>
                     <li><a href="news.html">LNC소식</a></li>
                     <li><a href="inquiry.html">납품문의</a></li>
                 </ul>
