--- a/employ-procedure.html
+++ b/employ-procedure.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
-    <title>LNC소식 - LNC (주)엘앤씨 에프앤비</title> 
+    <title>연계고용 - LNC (주)엘앤씨 에프앤비</title> 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="js/style.js"></script>
     <link rel="stylesheet" href="css/import.css">
 </head>
 <body>
-    <div class="newsPage">
+    <div class="employProcedurePage">
         <header class="mainContentSize">
             <h1><a href="index.html" class="imgBox">LNC (주)엘앤씨 에프앤비</a></h1>
             <button class="iconBox">메뉴 열기</button>
@@ -19,8 +19,8 @@
                 <ul>
                     <li><a href="aboutUs.html">회사소개</a></li>
                     <li><a href="business.html">사업안내</a></li>
-                    <li><a href="employ-policy.html">연계고용</a></li>
-                    <li class="active"><a href="news.html">LNC소식</a></li>
+                    <li class="active"><a href="employ-policy.html">연계고용</a></li>
+                    <li><a href="news.html">LNC소식</a></li>
                     <li><a href="inquiry.html">납품문의</a></li>
                 </ul>
                 <button class="iconBox">메뉴 닫기</button>
@@ -42,29 +42,22 @@
             </a>
         </aside>
 
+        <div class="topBox contentsSize-padding">
+            <p>
+                LNC와 함께하시면<br>
+                <strong>장애인고용 효과</strong>와 <strong>연계고용 부담금</strong><br>
+                <strong>감면효과</strong>를 동시에 누리실 수 있습니다.
+            </p>
+        </div>
+
+        <ul class="tabArea">
+            <li><a href="employ-policy.html">연계고용부담 감면제도란?</a></li>
+            <li class="active"><a href="employ-procedure.html">연계고용감면 절차 안내</a></li>
+            <li><a href="employ-calculator.html">연계고용부담금 감면 계산기</a></li>
+        </ul>
+
         <div class="contentsBox">
-            <section>
-                <h2>LNC 소식</h2>
-                <ul class="boardBox">
-                    <li>
-                        <a href="">
-                            <img src="https://placehold.co/380x214" alt="임시 이미지">
-                            <strong>LNC 관련 소식 타이틀 영역</strong>
-                            <time>2024.03.30</time>
-                        </a>
-                    </li>
-                </ul>
-                <div class="paginationBox" data-styleIdx="a">
-                    <a class="iconBox">첫 페이지</a>
-                    <a class="iconBox">이전 페이지</a>
-                    <ol>
-                        <li class="active"><a href="">1</a></li>
-                        <li><a href="">2</a></li>
-                    </ol>
-                    <a class="iconBox">다음 페이지</a>
-                    <a class="iconBox">마지막 페이지</a>
-                </div>
-            </section>
+            
         </div>
 
         
