pc - 연계고용 - 절차 완료

--- a/employ-procedure.html
+++ b/employ-procedure.html
@@ -57,7 +57,66 @@
         </ul>
 
         <div class="contentsBox">
-            
+            <section>
+                <h2 class="underLine">연계고용 감면 절차</h2>
+                <p>연계고용제도를 이용하기 위해서는 아래와 같은 절차를 따릅니다.</p>
+                <ol>
+                    <li>
+                        <strong>연계고용도급계약서 작성</strong>
+                        <div>
+                            <p>
+                                연계고용 도급계약서/도급업무 약정서 체결<br>
+                                계약 기간 1년 이상<br>
+                                도급 품목 및 수량 확정
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>발주,납품 및 비용지급</strong>
+                        <div>
+                            <p>
+                                계약된 품목을 발주 납품<br>
+                                계약서에 명시된 정산 일정에 따라 비용지급 납품 내역 정산 세부 거래 내역, 거래명세서 및 세금계산서 발행<br>
+                                계약서에 명시된 지급 일정에 따라 비용지급<br>
+                                <mark class="point02">지급확인서(입금확인증 등) 필요</mark><br>
+                                계약 외 품목 또는 발주 수량의 조정이 필요할 경우 양사 간에 합의 하에 변경 계약서 체결
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>고용부담금 감면 신청</strong>
+                        <div>
+                            <p>
+                                각 해년도 1월1일부터 12월 31일까지의 거래 실적을 바탕으로 고용부담금 감면 신청<br>
+                                (단, 계약 시작 일시가 1월 1일이 아닌 경우 계약 시작 일시부터)
+                            </p>
+                            <p>
+                                감면 신청 기간 : 1월 1일 ~ 1월 10일<br>
+                                고용부담금 감면 신고 전 감면 신청을 먼저 함<br>
+                                감면 금액이 확정되면 고용부담금 신고시 해당 금액 제외
+                            </p>
+                            <p>
+                                신청 방법 : 신청 서류를 준비하여 공단에 제출 (전자신고/오프라인신고 가능)
+                            </p>
+                        </div>
+                        <div>
+                            <mark class="point02">감면서류</mark>
+                            <b>고객사 준비 서류</b>
+                            <ul>
+                                <li>- 고용부담금 감면 신청서</li>
+                                <li>- 연계고용 계약서 (기본계약서/약정서)</li>
+                                <li>- 연계고용 대금청산 영수증 (세금계산서/지급확인증)</li>
+                            </ul>
+                            <b>LNC 준비 서류</b>
+                            <ul>
+                                <li>- 장애인근로자 명부 및 증명</li>
+                                <li>- 장애인근로자 월별 임금 대장</li>
+                                <li>- LNC 총매출액 확인서류</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ol>
+            </section>
         </div>
 
         
