--- a/employ-calculator.html
+++ b/employ-calculator.html
@@ -57,7 +57,369 @@
         </ul>
 
         <div class="contentsBox">
-            
+            <section>
+                <h2 class="underLine">연계고용부담금 감면 시뮬레이션</h2>
+                <p>
+                    필수입력사항 <mark class="point02">[고객사 수급액], [예상 고용부담금액 작성표]</mark>를 입력하시면<br>
+                    [최종 고용부담금 감면금액]이 자동 완성됩니다.
+                </p>
+                <ul>
+                    <li>
+                        <p>*고객사 수급액</p>
+                        <div data-unit="원">
+                            <input type="text">
+                        </div>
+                    </li>
+                    <li>
+                        <p>
+                            LNC 예상매출<br>
+                            (전년도기준)
+                        </p>
+                        <div data-unit="원">
+                            0
+                        </div>
+                    </li>
+                    <li>
+                        <p>LNC 장애인수</p>
+                        <div data-unit="명">
+                            70
+                        </div>
+                    </li>
+                    <li>
+                        <p>
+                            예상부담금 발생액<br>
+                            (해당기간)
+                        </p>
+                        <div data-unit="원">
+                            0
+                        </div>
+                    </li>
+                    <li>
+                        <p>수급비율</p>
+                        <div>
+                            0
+                        </div>
+                    </li>
+                </ul>
+                <div>
+                    <strong>최종 고용부담금 감면금액 (해당기간) : <mark class="point02">0</mark> 원</strong>
+                    <small>* 고용부담금 감면금액은 전년도 기준으로 변동될 수 있습니다.</small>
+                    <small>* 예상부담금 발생액은 하단의 표를 이용해 금액 확인해주세요.</small>
+                </div>
+
+                <section>
+                    <h3>예상부담금 발생액 작성표</h3>
+                    <p>본 작성표를 입력하시면 상단 양식에서 [예상부담금 발생액] 과 [최종 고용부담금 감면금액]이 자동 완성됩니다.</p>
+                    <mark class="point02">* 필수입력사항 : [도급거래여부], [상시근로자수], [장애인근로자수]</mark>
+                    <div>
+                        <button class="active">민간 사업주</button>
+                        <button>공공기관/지방공기업</button>
+                        <button>국가/자치단체 (공무원 아닌 근로자)</button>
+                    </div>
+                    <strong>민간기업의 장애인 의무 고용율은 3.1%</strong>
+                    <span>(2023년 기준)</span>
+                    <table border="1">
+                        <thead>
+                            <tr>
+                                <th rowspan="2">월별</th>
+                                <th rowspan="2">
+                                    도급<br>
+                                    거래<br>
+                                    여부
+                                </th>
+                                <th rowspan="2">
+                                    *상시<br>
+                                    근로자수
+                                </th>
+                                <th rowspan="2">
+                                    의무<br>
+                                    고용인원
+                                </th>
+                                <th colspan="4">장애인근로자수</th>
+                                <th rowspan="2">
+                                    미달<br>
+                                    고용인원<br>
+                                    (미고용월)
+                                </th>
+                                <th colspan="5">미달고용인원 (고용월)</th>
+                                <th rowspan="2">
+                                    예상부담금<br>
+                                    발생액
+                                </th>
+                                <th rowspan="2">월감면액</th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    *경증<br>
+                                    장애인
+                                </th>
+                                <th>
+                                    *중증 장애인<br>
+                                    (60시간 이상)
+                                </th>
+                                <th>
+                                    *중증 장애인<br>
+                                    (60시간 미만)
+                                </th>
+                                <th>적용인원</th>
+                                <th>계</th>
+                                <th>
+                                    1/4<br>
+                                    미달
+                                </th>
+                                <th>
+                                    1/4~1/2<br>
+                                    미달
+                                </th>
+                                <th>
+                                    1/2~3/4<br>
+                                    미달
+                                </th>
+                                <th>
+                                    3/4<br>
+                                    이상
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>2월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>3월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>4월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>5월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>6월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>7월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>8월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>9월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>10월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>11월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>12월</td>
+                                <td><input type="checkbox"><label for=""></label></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td><input type="text"></td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="8">
+                                    <p>
+                                        예상부담금 발생액 합계 :
+                                        <span>0</span>
+                                    </p>
+                                </td>
+                                <td colspan="8">
+                                    <p>
+                                        감면금액 합계 :
+                                        <span>0</span>
+                                    </p>
+                                </td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </section>
+
+                <a href="" class="btn-bg">납품문의하기</a>
+            </section>
         </div>
 
         
