--- a/test.html
+++ b/test.html
@@ -4,103 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        ol{list-style: none; padding: 0; margin: 0;}
-        ol{margin-block: 194px; display: inline-flex; max-width: 1200px; width: 100%; background: url(Union.png) no-repeat center / cover;}
-        ol li{position: relative; text-align: center;}
-        ol li::before{content: ''; position: absolute; right: 2px; top: -3px; width: 10px; height: 62%; background-color: red; transform: translateX(-105%) rotate(-27deg); transform-origin: top;}
-        ol li::after{content: ''; position: absolute; right: 2px; bottom: -3px; width: 10px; height: 62%; background-color: red; transform: translateX(-105%) rotate(27deg); transform-origin: bottom;}
-        /* ol li:first-child{flex: 140;} */
-        ol li:not(:nth-last-child(-n + 2)){flex: 140;}
-        ol li:nth-last-child(2){flex: 160;}
-        ol li:last-child{flex: 200;}
-        ol li span{font-size: 26px; line-height: 80px; font-weight: 700; color: white;}
-        ol li div{height: 184px; margin-left: 8px; padding-block: 10px; padding-left: 15px; border-left: 1px dotted var(--color-font03); position: absolute; left: 0; text-align: left; box-sizing: border-box; /* position: relative; */}
-        ol li div::after{content: ''; position: absolute; left: 0; width: 15px; translate: -50%; aspect-ratio: 15 / 10; background: url(../images/icon-polygon.png) no-repeat center / cover;}
-        ol li:not(:last-child) div{width: 200%;}
-        ol li:last-child div{width: 100%;}
-        ol li:nth-child(2n) div{top: -194px;}
-        ol li:nth-child(2n) div::after{bottom: 0; rotate: 180deg;}
-        ol li:nth-child(2n + 1) div{bottom: -194px; display: flex; flex-direction: column; justify-content: flex-end;}
-        ol li:nth-child(2n + 1) div::after{top: 0;}
-        ol li div p{font-size: 16px; line-height: 19px; font-weight: 300;}
-        ol li div p:not(:last-of-type){margin-bottom: 20px;}
-    </style>
 </head>
 <body>
-    <ol>
-        <li>
-            <span>2014</span>
-            <div>
-                <p>한라유통(고양시) 설립</p>
-                <p>농림부 HACCP 적용작업장</p>
-            </div>
-        </li>
-        <li>
-            <span>2016</span>
-            <div>
-                <p>한라유통(용인시) 물류창고 설립</p>
-            </div>
-        </li>
-        <li>
-            <span>2017</span>
-            <div>
-                <p>
-                    (주)엠엔디 컴퍼니(인천시)<br>
-                    공장설립
-                </p>
-                <p>농림부 HACCP 적용작업장</p>
-            </div>
-        </li>
-        <li>
-            <span>2018</span>
-            <div>
-                <p>
-                    (주)엘앤씨 에프앤비(고양시)<br>
-                    공장설립
-                </p>
-                <p>농림부 HACCP 적용작업장</p>
-            </div>
-        </li>
-        <li>
-            <span>2019</span>
-            <div>
-                <p>
-                    돈육(돈까스) 성형기 및<br>
-                    커틀릿 제품 생산
-                </p>
-            </div>
-        </li>
-        <li>
-            <span>2020</span>
-            <div>
-                <p>
-                    김포시 하성면 소재 <br>
-                    공장부지 매입 및 설립
-                </p>
-            </div>
-        </li>
-        <li>
-            <span>2021</span>
-            <div>
-                <p>식육포장처리업 허가 및 
-                    HACCP인증 취득</p>
-                <p>
-                    김포시 소재 제2 물류창고 설립<br>
-                    (경기도 김포시 하성면 대지1000평 규모)
-                </p>
-            </div>
-        </li>
-        <li>
-            <span>2022</span>
-            <div>
-                <p>벤처기업 확인서 획득</p>
-                <p>
-                    장애인표준사업장 <br>
-                    인증 획득
-                </p>
-            </div>
-        </li>
-    </ol>
+    <table border="1">
+        <thead>
+            <tr>
+                <th rowspan="2">1 - 1</th>
+                <th>1 - 2</th>
+                <th>1 - 3</th>
+                <th>1 - 4</th>
+                <th>1 - 5</th>
+                <th>1 - 6</th>
+                <th>1 - 6</th>
+            </tr>
+            <tr>
+                <th>2 - 1</th>
+                <th>2 - 2</th>
+                <th>2 - 3</th>
+                <th>2 - 4</th>
+                <th>2 - 5</th>
+                <th>2 - 6</th>
+                <th>2 - 6</th>
+            </tr>
+        </thead>
+    </table>
 </body>
 </html>
