--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
             </footer>
         </div>
         <div class="paginationBox">
-            <button>이전</button>
+            <button class="iconBox">이전</button>
             <span>01</span>
             <span>04</span>
-            <button>다음</button>
+            <button class="iconBox">다음</button>
         </div>
     </div>
 </body>
