mobile - 연계고용 완료

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -134,7 +134,7 @@
             <section class="certificationArea">
                 <h2 class="underLine">장애인 표준 사업장 및 HACCP 인증기업</h2>
                 <p>
-                    LNC는 <b>장애인 표준 사업장 인증</b>으로 장애인 고용 및 <b>연계고용 부담금 감면제도 혜택</b>이 가능하며,<br>
+                    LNC는 <b>장애인 표준 사업장 인증</b>으로 장애인 고용 및 <b>연계고용 부담금 감면제도 혜택</b>이 가능하며,<br class="pc">
                     <b>HACCP 인증</b>으로 품질관리에 최선을 다하고 있습니다.
                 </p>
                 <ul data-styleIdx>
