--- a/test.html
+++ b/test.html
@@ -4,29 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        ol{margin: 0; padding: 0; list-style: none; display: flex; flex-direction: column; align-items: center; width: 60px; height: 800px; background: url(Union.png) no-repeat center / cover;}
+        ol li{flex: 100;}
+        ol li div{display: none;}
+    </style>
 </head>
 <body>
-    <table border="1">
-        <thead>
-            <tr>
-                <th rowspan="2">1 - 1</th>
-                <th>1 - 2</th>
-                <th>1 - 3</th>
-                <th>1 - 4</th>
-                <th>1 - 5</th>
-                <th>1 - 6</th>
-                <th>1 - 6</th>
-            </tr>
-            <tr>
-                <th>2 - 1</th>
-                <th>2 - 2</th>
-                <th>2 - 3</th>
-                <th>2 - 4</th>
-                <th>2 - 5</th>
-                <th>2 - 6</th>
-                <th>2 - 6</th>
-            </tr>
-        </thead>
-    </table>
+    <ol>
+        <li>
+            <span>2014</span>
+            <div>
+                <p>한라유통(고양시) 설립</p>
+                <p>농림부 HACCP 적용작업장</p>
+            </div>
+        </li>
+        <li>
+            <span>2016</span>
+            <div>
+                <p>한라유통(용인시) 물류창고 설립</p>
+            </div>
+        </li>
+        <li>
+            <span>2017</span>
+            <div>
+                <p>
+                    (주)엠엔디 컴퍼니(인천시)<br>
+                    공장설립
+                </p>
+                <p>농림부 HACCP 적용작업장</p>
+            </div>
+        </li>
+        <li>
+            <span>2018</span>
+            <div>
+                <p>
+                    (주)엘앤씨 에프앤비(고양시)<br>
+                    공장설립
+                </p>
+                <p>농림부 HACCP 적용작업장</p>
+            </div>
+        </li>
+        <li>
+            <span>2019</span>
+            <div>
+                <p>
+                    돈육(돈까스) 성형기 및<br>
+                    커틀릿 제품 생산
+                </p>
+            </div>
+        </li>
+        <li>
+            <span>2020</span>
+            <div>
+                <p>
+                    김포시 하성면 소재 <br>
+                    공장부지 매입 및 설립
+                </p>
+            </div>
+        </li>
+        <li>
+            <span>2021</span>
+            <div>
+                <p>식육포장처리업 허가 및 
+                    HACCP인증 취득</p>
+                <p>
+                    김포시 소재 제2 물류창고 설립<br>
+                    (경기도 김포시 하성면 대지1000평 규모)
+                </p>
+            </div>
+        </li>
+        <li>
+            <span>2022</span>
+            <div>
+                <p>벤처기업 확인서 획득</p>
+                <p>
+                    장애인표준사업장 <br>
+                    인증 획득
+                </p>
+            </div>
+        </li>
+    </ol>
 </body>
 </html>
