--- a/detail.html
+++ b/detail.html
@@ -73,6 +73,20 @@
                                 <time>2024.03.30</time>
                             </a>
                         </li>
+                        <li>
+                            <a href="">
+                                <img src="https://placehold.co/380x214" alt="임시 이미지">
+                                <strong>LNC 관련 소식 타이틀 영역</strong>
+                                <time>2024.03.30</time>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="https://placehold.co/380x214" alt="임시 이미지">
+                                <strong>LNC 관련 소식 타이틀 영역</strong>
+                                <time>2024.03.30</time>
+                            </a>
+                        </li>
                     </ul>
                 </section>
             </section>
