모바일 완료

--- a/employ-policy.html
+++ b/employ-policy.html
@@ -84,7 +84,7 @@
                                 <span>(B)</span>
                                 해당기업의 연간 거래액이<br>
                                 장애인표준사업장의<br>
-                                전체 연간매출에서 차지하는 비중
+                                전체 연간매출에서<br class="mobile"> 차지하는 비중
                             </li>
                         </ul>
                         <p>이 두 가지에 비례해서 결정됩니다.</p>
