--- a/inquiry.html
+++ b/inquiry.html
@@ -45,7 +45,7 @@
         <div class="contentsBox">
             <section>
                 <h2>납품문의</h2>
-                <p>빠른 시일안에 담당자가 확인하여, 메일 or 연락처로 회신드리겠습니다.</p>
+                <p>빠른 시일안에 담당자가 확인하여,<br class="mobile"> 메일 or 연락처로 회신드리겠습니다.</p>
                 <form>
                     <fieldset class="inputBox">
                         <ul>
