모바일 스타일링

--- a/employ-procedure.html
+++ b/employ-procedure.html
@@ -51,9 +51,9 @@
         </div>
 
         <ul class="tabArea">
-            <li><a href="employ-policy.html">연계고용부담 감면제도란?</a></li>
-            <li class="active"><a href="employ-procedure.html">연계고용감면 절차 안내</a></li>
-            <li><a href="employ-calculator.html">연계고용부담금 감면 계산기</a></li>
+            <li><a href="employ-policy.html">연계고용부담<br class="mobile"> 감면제도란?</a></li>
+            <li class="active"><a href="employ-procedure.html">연계고용감면<br class="mobile"> 절차 안내</a></li>
+            <li><a href="employ-calculator.html">연계고용부담금<br class="mobile"> 감면 계산기</a></li>
         </ul>
 
         <div class="contentsBox">
