--- a/employ-calculator.html
+++ b/employ-calculator.html
@@ -51,14 +51,14 @@
         </div>
 
         <ul class="tabArea">
-            <li><a href="employ-policy.html">연계고용부담 감면제도란?</a></li>
-            <li><a href="employ-procedure.html">연계고용감면 절차 안내</a></li>
-            <li class="active"><a href="employ-calculator.html">연계고용부담금 감면 계산기</a></li>
+            <li><a href="employ-policy.html">연계고용부담<br class="mobile"> 감면제도란?</a></li>
+            <li><a href="employ-procedure.html">연계고용감면<br class="mobile"> 절차 안내</a></li>
+            <li class="active"><a href="employ-calculator.html">연계고용부담금<br class="mobile"> 감면 계산기</a></li>
         </ul>
 
         <div class="contentsBox">
             <section>
-                <h2 class="underLine">연계고용부담금 감면 시뮬레이션</h2>
+                <h2 class="underLine">연계고용부담금<br class="mobile"> 감면 시뮬레이션</h2>
                 <p>
                     필수입력사항 <mark class="point02">[고객사 수급액], [예상 고용부담금액 작성표]</mark>를 입력하시면<br>
                     [최종 고용부담금 감면금액]이 자동 완성됩니다.
