--- a/detail.html
+++ b/detail.html
@@ -28,15 +28,15 @@
         </header>
 
         <aside>
-            <a href="">
+            <a href="employ-policy.html">
                 연계고용부담
                 <strong>감면제도란?</strong>
             </a>
-            <a href="">
+            <a href="employ-procedure.html">
                 연계고용감면
                 <strong>절차 안내</strong>
             </a>
-            <a href="">
+            <a href="employ-calculator.html">
                 연계고용부담금
                 <strong>감면 계산기</strong>
             </a>
@@ -67,21 +67,21 @@
                     <h3>다른 소식 보기</h3>
                     <ul class="boardBox">
                         <li>
-                            <a href="">
+                            <a href="detail.html">
                                 <img src="https://placehold.co/380x214" alt="임시 이미지">
                                 <strong>LNC 관련 소식 타이틀 영역</strong>
                                 <time>2024.03.30</time>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="detail.html">
                                 <img src="https://placehold.co/380x214" alt="임시 이미지">
                                 <strong>LNC 관련 소식 타이틀 영역</strong>
                                 <time>2024.03.30</time>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="detail.html">
                                 <img src="https://placehold.co/380x214" alt="임시 이미지">
                                 <strong>LNC 관련 소식 타이틀 영역</strong>
                                 <time>2024.03.30</time>
