--- a/employ-policy.html
+++ b/employ-policy.html
@@ -28,15 +28,15 @@
         </header>
 
         <aside>
-            <a href="">
+            <a href="employ-policy.html">
                 연계고용부담
                 <strong>감면제도란?</strong>
             </a>
-            <a href="">
+            <a href="employ-procedure.html">
                 연계고용감면
                 <strong>절차 안내</strong>
             </a>
-            <a href="">
+            <a href="employ-calculator.html">
                 연계고용부담금
                 <strong>감면 계산기</strong>
             </a>
@@ -131,7 +131,7 @@
                     </p>
                 </sectionc>
 
-                <a href="" class="btn-bg">납품문의하기</a>
+                <a href="inquiry.html" class="btn-bg">납품문의하기</a>
             </section>
         </div>
 
