--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         </header>
 
         <aside>
-            <a href="">
+            <a href="employ-policy.html">
                 연계고용부담
                 <strong>감면제도란?</strong>
             </a>
-            <a href="">
+            <a href="employ-procedure.html">
                 연계고용감면
                 <strong>절차 안내</strong>
             </a>
-            <a href="">
+            <a href="employ-calculator.html">
                 연계고용부담금
                 <strong>감면 계산기</strong>
             </a>
@@ -98,28 +98,28 @@
                 <h2>LNC 소식</h2>
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="detail.html">
                             <img src="https://placehold.co/440x248" alt="임시 이미지">
                             <b>LNC 관련 소식 타이틀 영역</b>
                             <time>2024.03.30</time>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="detail.html">
                             <img src="https://placehold.co/440x248" alt="임시 이미지">
                             <b>LNC 관련 소식 타이틀 영역</b>
                             <time>2024.03.30</time>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="detail.html">
                             <img src="https://placehold.co/440x248" alt="임시 이미지">
                             <b>LNC 관련 소식 타이틀 영역</b>
                             <time>2024.03.30</time>
                         </a>
                     </li>
                 </ul>
-                <a href="">소식 더보기</a>
+                <a href="news.html">소식 더보기</a>
             </section>
             <footer>
                 <img src="images/logo02.png" alt="LNC (주)엘앤씨 에프앤비">
