fullPage 적용 완료했다

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
     <title>LNC (주)엘앤씨 에프앤비</title> 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="js/style.js"></script>
     <link rel="stylesheet" href="css/import.css">
+    <script src="js/style.js"></script>
 </head>
 <body>
     <div class="mainPage">
@@ -43,7 +43,7 @@
         </aside>
 
         <div class="fullBox">
-            <div class="mainContentSize">
+            <div class="mainContentSize" data-full>
                 <span>
                     <mark class="point01 underLine">Healthy together!</mark>
                     함께 건강하게!
@@ -61,7 +61,7 @@
                 </p>
                 <a href="">자세히보기</a>
             </div>
-            <div class="mainContentSize">
+            <div class="mainContentSize" data-full>
                 <span>
                     <mark class="point01 underLine">Healthy together!</mark>
                     함께 건강하게!
@@ -78,7 +78,7 @@
                 </p>
                 <a href="">자세히보기</a>
             </div>
-            <div class="mainContentSize">
+            <div class="mainContentSize" data-full>
                 <span>
                     <mark class="point01 underLine">Healthy together!</mark>
                     함께 건강하게!
@@ -94,7 +94,7 @@
                 </p>
                 <a href="">자세히보기</a>
             </div>
-            <section class="mainContentSize newsArea">
+            <section class="mainContentSize newsArea" data-full="white">
                 <h2>LNC 소식</h2>
                 <ul>
                     <li>
@@ -151,9 +151,9 @@
                 </address>
             </footer>
         </div>
-        <div class="paginationBox">
+        <div class="full-pagination">
             <button class="iconBox">이전</button>
-            <span>01</span>
+            <span class="full-numb">01</span>
             <span>04</span>
             <button class="iconBox">다음</button>
         </div>
