--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
-    <title>LNC (주)엘앤씨 에프앤비</title> 
+    <title>LNC (주)엘앤씨 에프앤비</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/og.png" />
+    <!-- 썸네일 이미지 -->
+    <meta property="og:title" content="LNC (주)엘앤씨 에프앤비" />
+    <!-- 제목 -->
+    <meta property="og:description" content="Healthy together! 함께 건강하게! 를 꿈꾸는 기업">
+    <!-- 내용 -->
+    <meta property="og:url" content="https://kse012050.cafe24.com/LNC2" />
+    <!-- 주소 -->
+    <!-- 파비콘 -->
+    <link rel="icon" href="images/favicon.png">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/import.css">
     <script src="js/style.js"></script>
@@ -59,7 +70,7 @@
                     연계고용을 통해 건강한 파트너들과 사회에 이바지하는 기업.<br>
                     LNC FNB가 만들어갈 건강함을 함께해주세요.
                 </p>
-                <a href="">자세히보기</a>
+                <a href="aboutUs.html">자세히보기</a>
             </div>
             <div class="mainContentSize" data-full>
                 <span>
@@ -76,7 +87,7 @@
                     가장 건강하고 든든한 식사를 위해 매일도축,<br>
                     요청시간 준수를 최우선 원칙으로 진행합니다.
                 </p>
-                <a href="">자세히보기</a>
+                <a href="business.html">자세히보기</a>
             </div>
             <div class="mainContentSize" data-full>
                 <span>
@@ -92,30 +103,16 @@
                     또한 파트너사도 연계고용 부담금 감면 혜택을 받을 수 있습니다.<br>
                     건강한 먹을거리가 필요할 때 연계고용 기업LNC를 기억해주세요.
                 </p>
-                <a href="">자세히보기</a>
+                <a href="employ-policy.html">자세히보기</a>
             </div>
             <section class="mainContentSize newsArea" data-full="white">
                 <h2>LNC 소식</h2>
                 <ul>
                     <li>
-                        <a href="detail.html">
-                            <img src="https://placehold.co/440x248" alt="임시 이미지">
-                            <b>LNC 관련 소식 타이틀 영역</b>
-                            <time>2024.03.30</time>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="detail.html">
-                            <img src="https://placehold.co/440x248" alt="임시 이미지">
-                            <b>LNC 관련 소식 타이틀 영역</b>
-                            <time>2024.03.30</time>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="detail.html">
-                            <img src="https://placehold.co/440x248" alt="임시 이미지">
-                            <b>LNC 관련 소식 타이틀 영역</b>
-                            <time>2024.03.30</time>
+                        <a href="detail01.html">
+                            <img src="images/news/news01-1.jpeg" alt="2024년 (주)엘앤씨 에프앤비 신년회 단체사진 촬영 이미지">
+                            <b>2024년 (주)엘앤씨 에프앤비 신년회 단체사진 촬영</b>
+                            <time>2024.01.01</time>
                         </a>
                     </li>
                 </ul>
