--- a/news.html
+++ b/news.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
     <title>LNC소식 - LNC (주)엘앤씨 에프앤비</title> 
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/og.png" />
+    <!-- 썸네일 이미지 -->
+    <meta property="og:title" content="LNC (주)엘앤씨 에프앤비" />
+    <!-- 제목 -->
+    <meta property="og:description" content="내용">
+    <!-- 내용 -->
+    <meta property="og:url" content="https://kse012050.cafe24.com/LNC2" />
+    <!-- 주소 -->
+    <!-- 파비콘 -->
+    <link rel="icon" href="images/favicon.png">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="js/style.js"></script>
     <link rel="stylesheet" href="css/import.css">
@@ -47,22 +58,22 @@
                 <h2>LNC 소식</h2>
                 <ul class="boardBox">
                     <li>
-                        <a href="detail.html">
-                            <img src="https://placehold.co/380x214" alt="임시 이미지">
-                            <strong>LNC 관련 소식 타이틀 영역</strong>
-                            <time>2024.03.30</time>
+                        <a href="detail01.html">
+                            <img src="images/news/news01-1.jpeg" alt="2024년 (주)엘앤씨 에프앤비 신년회 단체사진 촬영 이미지">
+                            <strong>2024년 (주)엘앤씨 에프앤비 신년회 단체사진 촬영</strong>
+                            <time>2024.01.01</time>
                         </a>
                     </li>
                 </ul>
                 <div class="paginationBox" data-styleIdx="a">
-                    <a class="iconBox">첫 페이지</a>
-                    <a class="iconBox">이전 페이지</a>
+                    <a href="" class="iconBox">첫 페이지</a>
+                    <a href="" class="iconBox">이전 페이지</a>
                     <ol>
                         <li class="active"><a href="">1</a></li>
-                        <li><a href="">2</a></li>
+                        <!-- <li><a href="">2</a></li> -->
                     </ol>
-                    <a class="iconBox">다음 페이지</a>
-                    <a class="iconBox">마지막 페이지</a>
+                    <a href="" class="iconBox">다음 페이지</a>
+                    <a href="" class="iconBox">마지막 페이지</a>
                 </div>
             </section>
         </div>
