--- a/business.html
+++ b/business.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
     <title>사업안내 - LNC (주)엘앤씨 에프앤비</title> 
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/og.png" />
+    <!-- 썸네일 이미지 -->
+    <meta property="og:title" content="LNC (주)엘앤씨 에프앤비" />
+    <!-- 제목 -->
+    <meta property="og:description" content="내용">
+    <!-- 내용 -->
+    <meta property="og:url" content="https://kse012050.cafe24.com/LNC2" />
+    <!-- 주소 -->
+    <!-- 파비콘 -->
+    <link rel="icon" href="images/favicon.png">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="js/style.js"></script>
     <link rel="stylesheet" href="css/import.css">
