수정 사항 완료

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- 제목 -->
     <meta property="og:description" content="Healthy together! 함께 건강하게! 를 꿈꾸는 기업">
     <!-- 내용 -->
-    <meta property="og:url" content="https://kse012050.cafe24.com/LNC2" />
+    <meta property="og:url" content="http://52.78.240.33/" />
     <!-- 주소 -->
     <!-- 파비콘 -->
     <link rel="icon" href="images/favicon.png">
